Project(${Chronicle_API_LIB})

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FILE(GLOB CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
MESSAGE(STATUS ">> Files: ${CPPFILES}")

set(HEADERS 
	${HEADERS} 
	${CMAKE_CURRENT_SOURCE_DIR}/src
	PARENT_SCOPE)

include_directories(${HEADERS})

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${CPPFILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} )

IF(OUTPUT_DIR_FOUND)
	SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})
ENDIF(OUTPUT_DIR_FOUND)

set( CMAKE_VERBOSE_MAKEFILE off )
