Project(${Ripper_Wrapper_API_LIB})

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FILE(GLOB CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/ripper.cpp)
MESSAGE(STATUS ">> Files: ${CPPFILES}")

set(HEADERS 
	${HEADERS}
	"${CMAKE_CURRENT_SOURCE_DIR}/src"
	PARENT_SCOPE)

SET(Ripper_API_LIB "Rip")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ripper)

include_directories(${HEADERS})

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${CPPFILES} src/MultiRule.hh src/SingleRule.hh src/GeneralRule.hh)
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${Ripper_API_LIB} ${Base_API_LIB})

IF(OUTPUT_DIR_FOUND)
	SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})
ENDIF(OUTPUT_DIR_FOUND)

set( CMAKE_VERBOSE_MAKEFILE off )
