Project(${Ripper_API_LIB})

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FILE(GLOB CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} code/*.c)
MESSAGE(STATUS ">> Files: ${CPPFILES}")

set(HEADERS
        ${HEADERS}
        "${CMAKE_CURRENT_SOURCE_DIR}/code"
        PARENT_SCOPE)

include_directories(${HEADERS})

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w")

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${CPPFILES})

IF(OUTPUT_DIR_FOUND)
    SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})
ENDIF(OUTPUT_DIR_FOUND)

set( CMAKE_VERBOSE_MAKEFILE off )
